--- a/package.json
+++ b/package.json
@@ -25,32 +25,31 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^6.12.0",
-    "ember-cli-htmlbars": "^2.0.3"
+    "ember-cli-babel": "^7.1.1",
+    "ember-cli-htmlbars": "^3.0.0"
   },
   "devDependencies": {
-    "broccoli-asset-rev": "^2.7.0",
-    "ember-cli": "~3.1.4",
-    "ember-cli-dependency-checker": "^2.1.0",
+    "@ember/optional-features": "^0.6.4",
+    "broccoli-asset-rev": "^3.0.0",
+    "ember-cli": "~3.4.2",
+    "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-eslint": "^4.2.3",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.2",
-    "ember-cli-inject-live-reload": "^1.7.0",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
+    "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-qunit": "^4.3.2",
-    "ember-cli-uglify": "^2.1.0",
     "ember-disable-prototype-extensions": "^1.1.3",
-    "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-resolver": "^4.5.5",
-    "ember-source": "~3.1.2",
+    "ember-resolver": "^5.0.1",
+    "ember-source": "~3.4.1",
     "ember-source-channel-url": "^1.1.0",
-    "ember-try": "^0.2.23",
-    "eslint-plugin-ember": "^5.1.1",
-    "eslint-plugin-node": "^6.0.1",
+    "ember-try": "^1.0.0",
+    "eslint-plugin-ember": "^5.2.0",
+    "eslint-plugin-node": "^7.0.1",
     "loader.js": "^4.7.0"
   },
   "engines": {
-    "node": "6.* || >= 8.*"
+    "node": "6.* || 8.* || >= 10.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
