--- a/package.json
+++ b/package.json
@@ -25,31 +25,31 @@
     "test:all": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^7.1.1",
-    "ember-cli-htmlbars": "^3.0.0"
+    "ember-cli-babel": "^7.8.0",
+    "ember-cli-htmlbars": "^3.1.0"
   },
   "devDependencies": {
-    "@ember/optional-features": "^0.6.4",
+    "@ember/optional-features": "^0.7.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-cli": "~3.4.2",
-    "ember-cli-dependency-checker": "^3.0.0",
-    "ember-cli-eslint": "^4.2.3",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
+    "ember-cli": "~3.11.0",
+    "ember-cli-dependency-checker": "^3.2.0",
+    "ember-cli-eslint": "^5.1.0",
+    "ember-cli-htmlbars-inline-precompile": "^2.1.0",
     "ember-cli-inject-live-reload": "^1.8.2",
-    "ember-cli-qunit": "^4.3.2",
     "ember-disable-prototype-extensions": "^1.1.3",
-    "ember-load-initializers": "^1.1.0",
+    "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-resolver": "^5.0.1",
-    "ember-source": "~3.4.1",
-    "ember-source-channel-url": "^1.1.0",
-    "ember-try": "^1.0.0",
-    "eslint-plugin-ember": "^5.2.0",
-    "eslint-plugin-node": "^7.0.1",
+    "ember-qunit": "^4.4.1",
+    "ember-resolver": "^5.1.3",
+    "ember-source": "~3.11.1",
+    "ember-source-channel-url": "^2.0.1",
+    "ember-try": "^1.2.1",
+    "eslint-plugin-ember": "^6.7.1",
+    "eslint-plugin-node": "^9.1.0",
     "loader.js": "^4.7.0"
   },
   "engines": {
-    "node": "6.* || 8.* || >= 10.*"
+    "node": "8.* || 10.* || 12.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
