--- a/package.json
+++ b/package.json
@@ -38,10 +38,13 @@
     "@babel/eslint-parser": "^7.25.1",
     "@babel/plugin-proposal-decorators": "^7.24.7",
     "@ember/optional-features": "^2.1.0",
+    "@ember/test-helpers": "^5.2.1",
+    "@embroider/test-setup": "^4.0.0",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
     "broccoli-asset-rev": "^3.0.0",
     "concurrently": "^8.2.2",
+    "ember-auto-import": "^2.10.0",
     "ember-cli": "~5.12.0",
     "ember-cli-clean-css": "^3.0.0",
     "ember-cli-dependency-checker": "^3.3.2",
@@ -61,8 +64,8 @@
     "eslint-plugin-qunit": "^8.1.2",
     "loader.js": "^4.7.0",
     "prettier": "^3.3.3",
-    "qunit": "^2.22.0",
-    "qunit-dom": "^3.2.1",
+    "qunit": "^2.24.1",
+    "qunit-dom": "^3.4.0",
     "stylelint": "^15.11.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-prettier": "^4.1.0",
