--- a/package.json
+++ b/package.json
@@ -1,85 +1,38 @@
 {
-  "name": "ember-select",
   "version": "0.9.1",
-  "description": "Select component",
-  "keywords": [
-    "ember-addon",
-    "ember-select",
-    "select",
-    "dropdown",
-    "selectize",
-    "power-select"
-  ],
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/btecu/ember-select.git"
+  },
   "license": "MIT",
-  "author": "Bujorel Tecu",
-  "directories": {
-    "doc": "doc",
-    "test": "tests"
-  },
-  "repository": "https://github.com/btecu/ember-select",
+  "author": "Bj Tecu",
   "scripts": {
-    "build": "ember build",
-    "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:css": "stylelint \"**/*.css\"",
-    "lint:css:fix": "concurrently \"pnpm:lint:css -- --fix\"",
-    "lint:hbs": "ember-template-lint .",
-    "lint:js": "eslint .",
-    "start": "ember serve",
-    "test": "concurrently \"pnpm:lint\" \"pnpm:test:*\" --names \"lint,test:\"",
-    "test:ember": "ember test",
-    "test:ember-compatibility": "ember try:each"
-  },
-  "dependencies": {
-    "@babel/core": "^7.27.1",
-    "ember-cli-babel": "^8.2.0",
-    "ember-cli-htmlbars": "^6.3.0"
+    "build": "pnpm --filter ember-select build",
+    "lint": "pnpm --filter \"*\" lint",
+    "lint:fix": "pnpm --filter \"*\" lint:fix",
+    "prepare": "pnpm build",
+    "start": "concurrently \"pnpm:start:*\" --restart-after 5000 --prefix-colors cyan,white,yellow",
+    "start:addon": "pnpm --filter ember-select start",
+    "start:test-app": "pnpm --filter test-app start",
+    "test": "pnpm --filter \"*\" test"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.27.1",
-    "@babel/plugin-proposal-decorators": "^7.27.1",
-    "@ember/optional-features": "^2.2.0",
-    "@ember/test-helpers": "^5.2.1",
-    "@embroider/test-setup": "^4.0.0",
-    "@glimmer/component": "^2.0.0",
-    "@glimmer/tracking": "^1.1.2",
-    "broccoli-asset-rev": "^3.0.0",
-    "concurrently": "^9.1.2",
-    "ember-auto-import": "^2.10.0",
-    "ember-cli": "~5.12.0",
-    "ember-cli-clean-css": "^3.0.0",
-    "ember-cli-dependency-checker": "^3.3.3",
-    "ember-cli-terser": "^4.0.2",
-    "ember-load-initializers": "^3.0.1",
-    "ember-qunit": "^9.0.2",
-    "ember-resolver": "^13.1.0",
-    "ember-source": "~5.12.0",
-    "ember-source-channel-url": "^3.0.0",
-    "ember-try": "^4.0.0",
-    "ember-template-lint": "^7.2.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-ember": "^12.5.0",
-    "eslint-plugin-n": "^17.17.0",
-    "eslint-plugin-prettier": "^5.2.6",
-    "eslint-plugin-qunit": "^8.1.2",
-    "loader.js": "^4.7.0",
-    "prettier": "^3.5.3",
-    "qunit": "^2.24.1",
-    "qunit-dom": "^3.4.0",
-    "stylelint": "^16.19.1",
-    "stylelint-config-standard": "^38.0.0",
-    "stylelint-prettier": "^5.0.3",
-    "webpack": "^5.99.7"
+    "@babel/eslint-parser": "^7.28.0",
+    "@eslint/js": "^9.34.0",
+    "concurrently": "^9.2.1",
+    "eslint": "^9.34.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-ember": "^12.7.3",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-n": "^17.21.3",
+    "globals": "^16.3.0",
+    "prettier-plugin-ember-template-tag": "^2.1.0"
   },
-  "engines": {
-    "node": ">= 20"
-  },
-  "ember": {
-    "edition": "octane"
-  },
-  "ember-addon": {
-    "configPath": "tests/dummy/config"
-  },
+  "workspaces": [
+    "ember-select",
+    "test-app"
+  ],
   "packageManager": "pnpm@10.15.0",
   "volta": {
     "node": "22.18.0",
