Test more versions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,7 @@ jobs:
         try-scenario:
           - ember-lts-4.12
           - ember-lts-5.12
+          - ember-lts-6.4
           - ember-release
           - ember-beta
           - ember-canary
